# woob

./: .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .yamlfmt  .yamllint  AUTHORS  CONTRIBUTING.md  ChangeLog  INSTALL  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.ci/: check_modules.sh  requirements.txt  requirements_modules.txt
.gitlab/issue_templates/: Module_bug.md
contrib/: .bandit  anonymiser.sh  boobot.py  imm-o-matic  picross-solver.py  replace-backends-pass.py  report_accounts.sh
contrib/boobank_indicator/: MANIFEST.in  README.md  setup.py
contrib/downloadboob/: downloadboob.py
contrib/hds/: export.py
contrib/munin/: boobank-munin  freemobile-munin  nettokom-munin  weboob-generic
contrib/plugin.video.videoobmc/: changelog.txt  default.py  default_test.py
contrib/rboorrent-download/: rboorrent-download.py
contrib/videoob_web/: videoob-webserver
contrib/webextension-session-importer/: README  manifest.json
contrib/windows-install/: HOW_TO.txt  convertPNG2ICO.py  create-exe-setup-weboob.bat  settings.cmd  setup-weboob.bat
docs/: Makefile  make.bat
docs/source/: arch.excalidraw  conf.py  contents.rst  genapi.py  index.rst
man/: woob-athon.1  woob-bands.1  woob-bank.1  woob-bill.1  woob-books.1  woob-bugtracker.1  woob-calendar.1  woob-cinema.1  woob-cli.1  woob-config.1  woob-contentedit.1  woob-dating.1  woob-debug.1  woob-gallery.1  woob-gauge.1  woob-geolocip.1  woob-housing.1  woob-job.1  woob-lyrics.1  woob-money.1  woob-msg.1  woob-parcel.1  woob-paste.1  woob-pricecompare.1  woob-radio.1  woob-recipes.1  woob-repos.1  woob-rpg.1  woob-shop.1  woob-smtp.1  woob-subtitles.1  woob-torrent.1  woob-translate.1  woob-travel.1  woob-video.1  woob-weather.1
modules/: .bandit
modules/750g/: __init__.py  browser.py  module.py  pages.py  test.py
modules/abeilleassurances/: __init__.py  browser.py  module.py  pages.py
modules/adecco/: __init__.py  browser.py  module.py  pages.py  test.py
modules/afer/: __init__.py  browser.py  module.py
modules/agendaculturel/: __init__.py  browser.py  calendar.py  module.py  pages.py  test.py
modules/agendadulibre/: __init__.py  browser.py  calendar.py  module.py  pages.py  test.py
modules/airparif/: __init__.py  browser.py  module.py  pages.py  test.py
modules/allianzbanque/: __init__.py  browser.py  module.py  pages.py
modules/allocine/: __init__.py  browser.py  module.py  test.py
modules/allrecipes/: __init__.py  browser.py  module.py  pages.py  test.py
modules/amazon/: __init__.py  browser.py  module.py  pages.py  test.py
modules/amazonstorecard/: __init__.py  browser.py  module.py  pages.py  test.py
modules/ameli/: __init__.py  browser.py  module.py  pages.py
modules/amelipro/: __init__.py  browser.py  module.py  pages.py  test.py
modules/americanexpress/: __init__.py  browser.py  fingerprint.py  module.py  pages.py  test.py
modules/amundi/: __init__.py  browser.py  es_virtkeyboard_page.py  module.py  pages.py  requirements.txt
modules/anticaptcha/: __init__.py  browser.py  module.py  test.py
modules/apec/: __init__.py  browser.py  job.py  module.py  pages.py  test.py
modules/apivie/: __init__.py  browser.py  module.py  pages.py  requirements.txt  test.py
modules/april/: __init__.py  browser.py  module.py  pages.py
modules/arte/: __init__.py  browser.py  module.py  pages.py  test.py  video.py
modules/asana/: __init__.py  browser.py  module.py  test.py
modules/audioaddict/: __init__.py  module.py  test.py
modules/aum/: __init__.py  antispam.py  browser.py  contact.py  module.py  test.py
modules/aumagasin/: __init__.py  browser.py  module.py  pages.py  test.py
modules/avendrealouer/: __init__.py  browser.py  constants.py  module.py  pages.py  test.py
modules/aviva/: __init__.py  browser.py  module.py  pages.py  test.py
modules/axabanque/: __init__.py  browser.py  module.py  proxy_browser.py  test.py
modules/bandcamp/: __init__.py  browser.py  module.py  pages.py  test.py
modules/banqueaccord/: __init__.py  module.py
modules/banquepopulaire/: __init__.py  browser.py  document_pages.py  module.py  pages.py  requirements.txt  test.py
modules/barclays/: __init__.py  browser.py  module.py  pages.py  requirements.txt  test.py
modules/becm/: __init__.py  browser.py  module.py  pages.py  test.py
modules/bforbank/: __init__.py  browser.py  module.py  pages.py  spirica_browser.py
modules/bibliothequesparis/: __init__.py  browser.py  module.py  pages.py  test.py
modules/bienici/: __init__.py  browser.py  constants.py  module.py  pages.py  test.py
modules/billetreduc/: __init__.py  browser.py  module.py  pages.py  test.py
modules/binance/: __init__.py  browser.py  module.py  test.py
modules/binck/: __init__.py  browser.py  module.py  pages.py  test.py
modules/blablacar/: __init__.py  browser.py  module.py  pages.py  test.py
modules/blogspot/: __init__.py  browser.py  module.py  pages.py  test.py
modules/bnp/: __init__.py  module.py  test.py
modules/bnpcards/: __init__.py  browser.py  module.py  pages.py  proxy_browser.py
modules/bnporc/: __init__.py  module.py  test.py
modules/bnppere/: __init__.py  browser.py  module.py  pages.py  test.py
modules/bolden/: __init__.py  browser.py  module.py  pages.py
modules/boursedirect/: __init__.py  browser.py  module.py  pages.py
modules/boursorama/: __init__.py  browser.py  document_pages.py  module.py  pages.py  test.py  transfer_pages.py
modules/bouygues/: __init__.py  browser.py  invoices_query.txt  (+2 more)
tests/: compat.py  formatters.py
tools/: check_xpath.py  common.sh  debpydep.py  har-to-old.py  local_install.py  local_run.py  make_man.py  make_man.sh  modules_testing_grid.py  pyflakes-strict.sh  pyflakes.sh  pyreverse.sh  release.py  release.sh  run_tests.sh  set-module-dependencies.py  setup-virtualenv.sh  stable_backport.py  stale_pyc.py  weboob_lint.sh  woob_bash_completion  woob_lint.py  woob_lint.sh
weboob/: __init__.py  exceptions.py
woob/: .bandit  __init__.py  __main__.py  exceptions.py  launcher.py
(+1854 files in other folders)
