[build-system]
requires = [
    "setuptools>=63.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "woob"
version = "3.7"
description = "Woob, Web Outside Of Browsers"
authors = [
    {name = "Romain Bignon", email = "romain@woob.dev"},
]
readme = "README.rst"
license = {text = "LGPL-3.0-or-later"}
keywords = ["scraping", "web", "banking"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.9"
dependencies = [
    "lxml",
    # `requests` versions 2.32.0, 2.32.1, and 2.32.2 are affected by a bug breaking the ability to specify
    # custom SSLContexts in sub-classes of HTTPAdapter (https://github.com/psf/requests/issues/6715) and another
    # breaking the ability to load certificates with HTTPAdapters (https://github.com/psf/requests/issues/6730)
    "requests >= 2.0.0, != 2.32.0, != 2.32.1, != 2.32.2, != 2.32.3",
    "python-dateutil",
    "PyYAML",
    "html2text >= 3.200",
    "unidecode",
    "Pillow",
    "Babel",
    "packaging ~= 23.0",
    "pycountry",
    "rich ~= 13.0",
    "termcolor",
    "schwifty >= 2024.1",
    "deprecated",
]

[project.scripts]
woob = "woob.launcher:Launcher.run"

[project.urls]
"Bug Tracker" = "https://gitlab.com/woob/woob/-/issues"
"Documentation" = "https://woob.dev"
"Homepage" = "https://woob.tech"
"Release notes" = "https://gitlab.com/woob/woob/-/releases"
"Source" = "https://gitlab.com/woob/woob"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
update_changelog_on_bump = true
version = "3.7"
version_files = [
    "pyproject.toml:version",
]

[tool.flake8]
max-line-length = 120
exclude = ['dist', '*.egg-info', 'build', '.git', '__pycache__', 'boilerplate_data']
extend-ignore = [
    # A lot of the codebase seems keen on visual alignment of operators (e.g. fields declaration)
    "E221",
    "E222",
    # Disabled because it doesn't allow exceptions, for example URLs or log
    # messages shouldn't be split, less readable or searchable.
    'E501',
    # newline after binary operator
    'W503',
    # Too many leading '#' for block comment
    # But it's a nice visual separator sometimes.
    'E266',
    # flake8-future-import: postponed annotations
    'FI18',
    'FI58',
    # do not perform function calls in argument defaults: breaks fastapi qs definitions
    'B008',
    # disable flake8-import-order, isort and black are in charge
    "I",
]
min-version = "3.9"
per-file-ignores = [
    "woob/tools/application/*:T201",
    "woob/applications/*:T201",
]

[tool.isort]
filter_files = true
known_first_party = [
    "woob",
    "weboob",
    "woob_modules",
]
line_length = 120
lines_after_imports = 2
profile = "black"
py_version = "39"

[tool.mypy]
show_error_codes = true

[tool.pytest.ini_options]
python_files = "tests/*.py test.py"
testpaths = [
    "tests",
    "woob/browser/browsers.py",
    "woob/browser/pages.py",
    "woob/browser/filters/standard.py",
    "woob/browser/filters/json.py",
    "woob/tools/json.py",
    "woob/tools/misc.py",
    "woob/browser/filters/file.py",
]

[tool.setuptools.packages.find]
include = ["woob", "woob.*", "weboob"]

[tool.black]
line-length = 120
