[nosetests]
verbosity = 2
detailed-errors = 1
with-doctest = 1
with-coverage = 1
where = woob
tests = woob.tools.capabilities.bank.iban,
        woob.tools.capabilities.bank.transactions,
        woob.tools.capabilities.paste,
        woob.tools.application.formatters.json,
        woob.tools.application.formatters.table,
        woob.tools.date,
        woob.tools.misc,
        woob.tools.path,
        woob.tools.tokenizer,
        woob.browser.browsers,
        woob.browser.pages,
        woob.browser.filters.standard,
        woob.browser.tests.form,
        woob.browser.tests.filters,
        woob.browser.tests.url,
        woob.browser.tests.xpath_functions

[isort]
known_first_party = woob, weboob
line_length = 120

[flake8]
max-line-length = 120
exclude = dist,*.egg-info,build,.git,__pycache__,boilerplate_data,stable_backport_data,*_ui.py

[easy_install]

[sdist]
owner = root
group = root

[bdist]
owner = root
group = root

[bdist_wheel]
owner = root
group = root
universal = 1

[metadata]
name = woob
# TODO fetch from __init__.py
version = 3.1

description = Woob, Web Outside Of Browsers
long_description = file:README.md
long_description_content_type = text/markdown

author = Romain Bignon
author_email = woob@woob.tech
maintainer = Romain Bignon
maintainer_email = romain@woob.tech

url = https://woob.tech/
license = GNU LGPL 3

classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python
    Topic :: Communications :: Email
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML

[options]
python_requires = >= 3.5

install_requires =
    lxml
    cssselect
    requests>=2.0.0
    python-dateutil
    PyYAML
    html2text>=3.200
    six
    unidecode
    Pillow
    Babel

tests_require =
    flake8
    nose
    xunitparser
    coverage

# TODO [options.data_files]

[options.entry_points]
console_scripts =
    woob = woob.applications.main:WoobMain.run
