[tool:pytest]
python_files = tests/*.py test.py
testpaths =
    tests
    woob/browser/browsers.py
    woob/browser/pages.py
    woob/browser/filters/standard.py
    woob/tools/json.py
    woob/tools/misc.py
# those files contain doctests

[isort]
known_first_party = woob, weboob, woob_modules
line_length = 120

[flake8]
max-line-length = 120
exclude = dist,*.egg-info,build,.git,__pycache__,boilerplate_data,stable_backport_data,*_ui.py

[easy_install]

[sdist]
owner = root
group = root

[bdist]
owner = root
group = root

[bdist_wheel]
owner = root
group = root
universal = 1

[metadata]
name = woob
# TODO fetch from __init__.py
version = 3.2

description = Woob, Web Outside Of Browsers
long_description = file:README.md
long_description_content_type = text/markdown

author = Romain Bignon
author_email = woob@woob.tech
maintainer = Romain Bignon
maintainer_email = romain@woob.tech

url = https://woob.tech/
license = GNU LGPL 3

classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python
    Topic :: Communications :: Email
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML

[options]
python_requires = >= 3.5

install_requires =
    lxml
    requests >= 2.0.0
    python-dateutil
    PyYAML
    html2text >= 3.200
    unidecode
    Pillow
    Babel
    packaging ~= 23.0

tests_require =
    flake8
    pytest
    pytest-cov
    xunitparser>=1.3.4
    coverage

# TODO [options.data_files]

[options.entry_points]
console_scripts =
    woob = woob.applications.main:WoobMain.run
